ISPN-15328 Use -XX:EnableDynamicAgentLoading on JDK 21 for ByteBuddy